syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.training.marketplace.member.controller.modal.request";

message LoginResponse{
  string member_id = 1;
  string auth_token = 2;
  string refresh_token = 3;
}